<resources>
    <string name="app_name">Multiverse_of_Geeks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Multiverse of Geeks</string>
    <string name="nav_header_subtitle">The best library out there</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--settings strings-->
    <string name="theme_title_settings">Dark Theme</string>

    <!--create_profile strings-->
    <string name="f_name">Full Name</string>
    <string name="u_name">User Name</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="email_hint">example@provider.com</string>
    <string name="password">Password</string>
    <string name="r_password">Repeat Password</string>
    <string name="term_checkbox">I agree to terms of service</string>
    <string name="create_account_button">Create account</string>
    <string name="already_have_account">Already have and account? go to Login window to login to your account</string>
    <string name="profile_image_disc">Her goes the profile image</string>

    <!--login strings-->
    <string name="login">Sign In</string>
    <string name="not_registered_message">Don\'t you have an account?</string>
    <string name="not_registered_link"><a href="">Create account</a></string>
    <string name="welcome_message">welcome to Multiverse of Geeks</string>

    <!--navbar strings-->
    <string name="group_title">Navigation</string>
    <string name="util_group_title">util</string>
    <string name="create_profile_nav">Create account</string>
    <string name="login_nav">Login</string>
    <string name="about_nav">About</string>
    <string name="my_profile_nav">My Profile</string>
    <string name="edit_profile_nav">Edit Profile</string>
    <string name="movies_main_nav">Movies</string>
    <string name="popular_movies_nav">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="boxoffice_movies">Boxoffice Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="single_movie_nav">Movie</string>
    <string name="main_tv_shows">Tv Shows Main</string>
    <string name="tv_show_nav">Tv Shows</string>
    <string name="popular_tv_show_nav">popular Tv Shows</string>
    <string name="top_rated_tv_show_nav">Top rated Tv Shows</string>
    <string name="on_air_tv_show_nav">On Air Tv Shows</string>
    <string name="airing_today_tv_show_nav">Airing today Tv Shows</string>
    <string name="tv_show_nav_s">Tv Show</string>
    <string name="search_movie_nav">Search movies</string>
    <string name="fav_movie_nav">Favorite movies</string>
    <string name="fav_tv_nav">Favorite TV Shows</string>
    <string name="fav_game_nav">Favorite Games</string>
    <string name="search_tv_show_nav">Search tv shows</string>
    <string name="game_nave">Games</string>
    <string name="single_free_game_nave">Free to play</string>
    <string name="all_games_nave">All games</string>
    <string name="single_game_nave">Single games</string>
    <string name="search_game_nave">search games</string>
    <string name="tv_season">Tv Seasons</string>

    <!--about strings-->
    <string name="createor_image_disc">creator image</string>
    <string name="about_me">My name is Kutaiba Nezar kashmar. I know I know my name is kind of weird and maybe a bit hard to read but in the same time I think it is kind of cool.
but you know what else is cool… having a library of every cool character from your favorite movie, show or game. and who knows maybe even more.
No but seriously,  The multiverse of Geeks is an Android app where the user can explore various movies and video games characters and their lure.
Furthermore, the user can leave comments, rate characters, and more.
The motivation behind this app is to have a place where the user can keep track and interact with the geek community through
common interests such as movies and video games all in one app.
Let me tell you more about my self. I am a software engineering student at VIA university Collage -university located in Midtjylland Denmark- and this app is part of the android development program.
In other words this is my first -more or less- complex android app. I love programing, acutely… I love anything has to do with computers and tech. You might have already figure this out that I love gaming and watching movies and video games.
Below there are links to my social media and github. If you have an advice or feedback PLEASE don\'t hesitate to contact me. enjoy best regards.
Kutaiba></string>

    <string name="github_link"><a href="">Github</a></string>
    <string name="Linkedin_link"><a href="">Linkedin</a></string>
    <string name="Facebook_link"><a href="">Facebook</a></string>

    <!--my profile strings-->
    <string name="my_profile_image_disc">User\'s profile image</string>
    <string name="name_info_header">Name</string>
    <string name="name_placeholder">TEMP</string>
    <string name="address_info_header">Address</string>
    <string name="address_placeholder">ADDRESS TEMP</string>
    <string name="gender_header">Gender</string>
    <string name="gender_placeholder">M F OTHERS</string>
    <string name="age_placeholder">AGE</string>
    <string name="edit_image_disc">Edit Button</string>

    <!--edit my profile strings-->
    <string name="street_name_hint">Street Name</string>
    <string name="street_number_hint">Street Number</string>
    <string name="house_number_hint">House Number</string>
    <string name="city_hint">City</string>
    <string name="zip_hint">Zip code</string>
    <string name="phone_hint">Phone number (with country code)</string>
    <string name="optional_header">Optional</string>
    <string name="gender_hint">Gender</string>
    <string name="age_header">Age</string>
    <string name="save_button">Save Changes</string>
    <string name="reset_button">Reset Password</string>
    <string name="delete_button">Delete Account</string>
    <string name="Sign_out">Sign Out</string>

    <!--home fragment strings-->
    <string name="home_text">PLACEHOLDER!!!</string>
    <string name="rawg">For More Games please check RAWG the video game database on the link below</string>
    <string name="tmdb_desc">For More Movies and Tv Showws please check TMDB the movie database on the link below</string>

    <!--single movie strings-->
    <string name="movie_image_desc">Here goes the movie poster</string>
    <string name="ratting">Ratting</string>
    <string name="tmdp_ratting">TMDB Rating</string>
    <string name="myapp_ratting">Geek Ratting</string>
    <string name="popularity">Popularity</string>
    <string name="r_year">Release Year</string>
    <string name="comment">Leave a comment</string>
    <string name="comment_header">Comments</string>
    <string name="to_similar">More like this</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="page">Page: </string>
    <string name="movie_collection">Collection</string>
    <string name="movie_budget">Budget</string>
    <string name="movie_revenue">Revenue</string>
    <string name="production_companies">Production Companies</string>
    <string name="home_page">Home Page</string>

    <!--Movies fragment strings-->
    <string name="search">search</string>
    <string name="popular_button">Popular</string>
    <string name="top_button">Top rated</string>
    <string name="now_button">Now playing</string>
    <string name="up_button">Upcoming</string>
    <string name="the_app_was_made_possible_with_the_help_of">The app was made possible with the help of:</string>
    <string name="tmdb">TMDB</string>
    <string name="cast_button">View Cast members</string>
    <string name="seasons_button">View Seasons</string>

    <!--TvSHows fragment strings-->
    <string name="on_air">On Air</string>
    <string name="airing_today">Airing Today</string>
    <string name="created_by">Created By</string>
    <string name="episode_runtime">Episode Runtime</string>
    <string name="tv_network">Network</string>
    <string name="tv_episode_num">Total Episodes</string>
    <string name="tv_season_num">Total Seasons</string>
    <string name="tv_status">Status</string>
    <string name="tv_type">Type</string>
    <string name="tv_production_company_heading">Production Companies</string>
    <string name="season_release_Date">Air date</string>
    <string name="season_overview">Overview</string>

    <!--Cast item strings-->
    <string name="nav_cast">Cast</string>
    <string name="name_holder">Name:</string>
    <string name="character">AS:</string>
    <string name="role">Role:</string>

    <!--games-->
    <string name="minimum_system_requirements">Minimum System Requirements</string>
    <string name="release_date">Release Date</string>
    <string name="game_url">Game URL</string>
    <string name="screen_shots">Screen Shots</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="game_genre">Genre</string>
    <string name="publisher">Publisher</string>
    <string name="platform">Platform</string>
    <string name="os">OS</string>
    <string name="processor">Processor</string>
    <string name="graphics">Graphics</string>
    <string name="memory">Memory</string>
    <string name="storage">Storage</string>
    <string name="average_play_time">Average Play Time</string>
    <string name="last_update">Last Update</string>
    <string name="tags">Tags</string>
    <string name="age">Ratted</string>
    <string name="dev_title">Developer</string>
    <string name="rawg_ratings">RAWG Rating</string>

    <!--Error-->
    <string name="not_found">SOMETHING WENT WRONG; TRY LATER</string>

    <!--settings-->
    <string name="dark_theme_key">dark_theme</string>
    <string name="theme_title">Change theme</string>
</resources>