<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery" />
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_slideshow" />

        <!--place holder-->
        <item
            android:id="@+id/nav_create_account"
            android:icon="@drawable/create_account_ic"
            android:title="@string/create_profile_nav"/>
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login_ic"
            android:title="@string/login"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_ic"
            android:title="@string/about_nav"/>
    </group>
</menu>