<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_gallery"
            android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.gallery.GalleryFragment"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_gallery" />

    <fragment
            android:id="@+id/nav_slideshow"
            android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_create_account"
        android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.create_account.CreateAccountFragment"
        android:label="@string/create_profile_nav"
        tools:layout="@layout/fragment_slideshow"/>

    <fragment
        android:id="@+id/nav_login"
        android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login"/>

    <fragment
        android:id="@+id/nav_about"
        android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.about.AboutFragment"
        android:label="@string/about_nav"
        tools:layout="@layout/fragment_about"/>

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.my_profile.MyProfileFragment"
        android:label="@string/my_profile_nav"
        tools:layout="@layout/fragment_my_profile"/>

</navigation>