<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/edit_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit_ic"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:layout_marginEnd="@dimen/edit_text_margin"
        android:contentDescription="@string/edit_image_disc" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:layout_marginBottom="@dimen/edit_text_margin"
        app:cardCornerRadius="@dimen/card_view_radius">

        <ImageView
            android:id="@+id/my_profile_image"
            android:layout_width="@dimen/image_view_dims"
            android:layout_height="@dimen/image_view_dims"
            android:layout_gravity="center"
            android:contentDescription="@string/my_profile_image_disc"
            android:src="@drawable/ic_launcher_background" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:text="@string/name_info_header"
        app:drawableStartCompat="@drawable/person_ic" />

    <TextView
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_custom"
        android:text="@string/name_placeholder" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:layout_marginBottom="@dimen/edit_text_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_info_header"
        android:layout_marginStart="@dimen/edit_text_margin"
        app:drawableStartCompat="@drawable/ic_globe_solid" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_placeholder"
        android:layout_marginStart="@dimen/margin_start_custom"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:layout_marginBottom="@dimen/edit_text_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_header"
        app:drawableStartCompat="@drawable/gender_ic"
        android:layout_marginStart="@dimen/edit_text_margin"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_placeholder"
        android:layout_marginStart="@dimen/margin_start_custom"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_header"
        app:drawableStartCompat="@drawable/birthdate_ic"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginTop="@dimen/edit_text_margin"/>

    <TextView
        android:id="@+id/birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_placeholder"
        android:layout_marginStart="@dimen/margin_start_custom"/>

</LinearLayout>