<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:padding="@dimen/edit_text_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/email_ic"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin"
            android:autofillHints="password"
            android:drawableStart="@drawable/password_ic"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:layout_gravity="center"/>



        <CheckBox
            android:id="@+id/terms_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin"
            android:text="@string/term_checkbox"
            android:layout_gravity="start"/>

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin"
            android:text="@string/create_account_button"
            android:layout_gravity="start"/>

        <Button
            android:id="@+id/go_to_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin"
            android:text="@string/login"
            android:textSize="20sp"
            android:layout_gravity="start"/>


    </LinearLayout>

</ScrollView>