<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/single_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_text"
                android:textSize="35sp"
                android:gravity="center"
                android:layout_margin="@dimen/edit_text_margin" />

        <ImageView
                android:id="@+id/single_movie_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/mog_log_background"
                android:contentDescription="@string/movie_image_desc"
                android:layout_gravity="center"
                android:minHeight="500dp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/edit_text_margin">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ratting"
                    android:paddingTop="4dp" />

            <RatingBar
                    android:id="@+id/single_movie_rating_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                    android:numStars="10"
                    android:isIndicator="true"
                    android:paddingTop="8dp"
                    android:layout_marginEnd="@dimen/edit_text_top_margin"
                    android:rating="0.0"
                    android:stepSize="0.5" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/edit_text_margin">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/r_year" />

            <TextView
                    android:id="@+id/movie_release_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_text" />

        </LinearLayout>

        <Button
                android:id="@+id/to_movie_cast_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cast_button"
                android:drawableEnd="@drawable/arrow_circle_right_ic"
                android:layout_marginStart="@dimen/edit_text_margin"
                android:layout_marginEnd="@dimen/edit_text_margin"/>

        <Button
                android:id="@+id/to_similar_movie_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_similar"
                android:drawableEnd="@drawable/arrow_circle_right_ic"
                android:layout_marginStart="@dimen/edit_text_margin"
                android:layout_marginEnd="@dimen/edit_text_margin" />

        <TextView
                android:id="@+id/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_text"
                android:layout_marginStart="@dimen/edit_text_margin"
                android:layout_marginTop="@dimen/edit_text_margin" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edit_text_margin">


            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movie_coming_rv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            <EditText
                    android:id="@+id/comment_edit_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="yes"
                    android:hint="@string/comment"
                    app:layout_constraintTop_toBottomOf="@+id/movie_coming_rv_id"
                    android:minHeight="48dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</ScrollView>
